spacing fix

--- a/aleph/static/style/aleph.scss
+++ b/aleph/static/style/aleph.scss
@@ -100,7 +100,7 @@ canvas#pdf {
     overflow-y: scroll;
     overflow: -moz-scrollbars-vertical; 
     // padding-top: 0.5em;
-    padding-bottom: 1em;
+    margin-bottom: 1em;
 
     td {
         white-space: nowrap;
